[package]
name = "bb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
binrw = "0.11.1"
chrono = "0.4.24"
indicatif = "0.17.3"
num-traits = "0.2.15"
#rusb = { path = "D:/GitHub/rusb" }
rusb = "0.9.1"
thiserror = "1.0.40"
