[package]
name = "bbrdb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
binrw = "0.13.3"
rusb = "0.9.4"
thiserror = "1.0.60"
indicatif = "0.17.3"
chrono = "0.4.38"
#bb = { path = "../bbrs" }
bb = { git = "https://github.com/Jhynjhiruu/bbrs.git" }

[features]
writing = []
default = []
